# spyne-test

./: .gitignore  README.md  pyproject.toml
cmd/: get_result.sh  run.sh
src/spoine/: db.sqlite3  main.py
src/spoine/models/: request.py  response.py
src/spoine/server/: asgi.py  manage.py  service.py  services.py  settings.py  urls.py  wsgi.py
tests/: test_app.py
