[tool.poetry]
name = "spoine"
version = "0.0.0"
description = ""
authors = ["NostraDavid <55331731+nostradavid@users.noreply.github.com>"]
packages = [{ include = "spoine", from = "src" }]

[tool.poetry.dependencies]
click = "^8.1.3"
Django = "^4.1"
flake8 = "^5.0.4"
gunicorn = "^20.1.0"
lxml = "^4.9.1"
pandas = "^1.4.3"
python = "^3.8"
python-decouple = "^3.6"
retry = "^0.9.2"
spyne = "^2.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.1"
bandit = "^1.7.4"
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spoine = 'spoine.main:main'
